[gd_scene load_steps=12 format=3 uid="uid://bw4ge6igswy6g"]

[ext_resource type="Script" path="res://Static Objects/magnetic_door/magnetic_door.gd" id="1_gq4dp"]
[ext_resource type="PackedScene" uid="uid://destal64t2o0q" path="res://Static Objects/magnetic_door/magnetic_door.tscn" id="2_64ux1"]
[ext_resource type="Script" path="res://Static Objects/magnetic_door/animation_player.gd" id="3_l2uap"]

[sub_resource type="BoxMesh" id="BoxMesh_qjqsc"]
resource_local_to_scene = true
size = Vector3(0.5, 3, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mikv2"]
resource_local_to_scene = true
points = PackedVector3Array(-0.25, -1.5, -0.25, -0.25, -1.5, 0.25, -0.25, 1.5, -0.25, 0.25, -1.5, -0.25, 0.25, -1.5, 0.25, -0.25, 1.5, 0.25, 0.25, 1.5, -0.25, 0.25, 1.5, 0.25)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_50727"]
points = PackedVector3Array(-0.25, -1.5, -0.25, -0.25, -1.5, 0.25, -0.25, 1.5, -0.25, 0.25, -1.5, -0.25, 0.25, -1.5, 0.25, -0.25, 1.5, 0.25, 0.25, 1.5, -0.25, 0.25, 1.5, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_4te76"]
size = Vector3(3, 0.5, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ilk4y"]
points = PackedVector3Array(1.5, 0.25, 0.25, 1.5, 0.25, -0.25, -1.5, 0.25, 0.25, 1.5, -0.25, 0.25, 1.5, -0.25, -0.25, -1.5, 0.25, -0.25, -1.5, -0.25, 0.25, -1.5, -0.25, -0.25)

[sub_resource type="Animation" id="Animation_33str"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.5, 0, 0), Vector3(-1.6, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, 0, 0), Vector3(1.6, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y0ssp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.5, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ux8vv"]
_data = {
"RESET": SubResource("Animation_y0ssp"),
"open": SubResource("Animation_33str")
}

[node name="MagneticDoorSuit" type="Node3D"]
script = ExtResource("1_gq4dp")

[node name="Model" type="Node3D" parent="."]

[node name="Frame" type="StaticBody3D" parent="Model"]
collision_layer = 4
collision_mask = 11

[node name="RightMesh" type="MeshInstance3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 1.5, 0)
mesh = SubResource("BoxMesh_qjqsc")

[node name="RightCollision" type="CollisionShape3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 1.5, 0)
shape = SubResource("ConvexPolygonShape3D_mikv2")

[node name="LeftMesh" type="MeshInstance3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 1.5, 0)
mesh = SubResource("BoxMesh_qjqsc")

[node name="LeftCollision" type="CollisionShape3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 1.5, 0)
shape = SubResource("ConvexPolygonShape3D_50727")

[node name="Top" type="MeshInstance3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0)
mesh = SubResource("BoxMesh_4te76")

[node name="TopCollision" type="CollisionShape3D" parent="Model/Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0)
shape = SubResource("ConvexPolygonShape3D_ilk4y")

[node name="LeftDoor" parent="Model" instance=ExtResource("2_64ux1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="RightDoor" parent="Model" instance=ExtResource("2_64ux1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." node_paths=PackedStringArray("left_door", "right_door")]
libraries = {
"": SubResource("AnimationLibrary_ux8vv")
}
script = ExtResource("3_l2uap")
left_door = NodePath("../Model/LeftDoor")
right_door = NodePath("../Model/RightDoor")
